# agent-directory

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ADMIN-GUIDE.md  AGENT-AD-SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  EVENT-REFERENCE.md  PROD-ROLLOUT-CHECKLIST.md  SECURITY-HARDENING.md  TOOL-CATALOG.md  USER-GUIDE.md
enterprise/: __init__.py
enterprise/agent/: __init__.py  base.py  checkpoint.py  events.py  identity.py  reactions.py  routing.py  task.py  trajectory.py
enterprise/broker/: __init__.py  config_assembler.py
enterprise/coordinator/: __init__.py  escalation.py  goal.py  goal_ingress.py  llm.py  service.py  workforce.py
enterprise/observability/: __init__.py  audit.py  dashboard.py  metrics.py
enterprise/provisioner/: __init__.py  config.py  credential_store.py  identity.py  ldap_client.py  lease_store.py  policy.py  service.py
enterprise/sandbox/: __init__.py  bwrap.py  seccomp.py
events/: AgentDirectory.man  Install-EventLog.ps1  Uninstall-EventLog.ps1
examples/: configure-event-forwarding.ps1  create-claude-agent.ps1  create-sandbox.ps1  keytab-generation.ps1  setup-delegation.ps1  setup-tool-access.ps1
schema/: 01-agent-attributes.ldif  01b-sandbox-attributes.ldif  02-tool-attributes.ldif  02b-policy-attributes.ldif  02c-gpo-attributes.ldif  03-agent-class.ldif  03b-sandbox-class.ldif  03c-policy-class.ldif  03d-gpo-class.ldif  04-tool-class.ldif  05-containers.ldif  06-default-tools.ldif  07-default-policies.ldif  08-default-gpos.ldif  install-schema.ps1  verify-deployment.ps1
scripts/: replace-oid.sh
(+130 files in other folders)
