[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-directory"
version = "0.1.0"
description = "Autonomous Enterprise Agent Framework — AD-backed identity, policy, and provisioning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["enterprise"]
